--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -165,6 +165,8 @@
 
             <ign-description [description]="model.description"></ign-description>
 
+            <ign-categories [categories]="model.categories"></ign-categories>
+
             <ign-tags [tags]="model.tags"></ign-tags>
 
             <div fxLayout="row"
