--- a/src/app/tags/tags.component.scss
+++ b/src/app/tags/tags.component.scss
@@ -14,6 +14,10 @@
   margin-bottom: 4px;
 }
 
+.margin-align {
+  margin-top: 8px;
+}
+
 /* The following prevents the form field jumping after a chip is added.
  * A lot of this css was copied from the angular material css style in
  * order to correctly position the mat-placeholder, with transitions, in
