--- a/src/app/model/new/new-model.component.html
+++ b/src/app/model/new/new-model.component.html
@@ -22,6 +22,13 @@
                      fxFill>
     </ign-description>
 
+    <ign-categories [categories]="categories"
+                    [edit]="true"
+                    [disabled]="uploading"
+                    (onModify)="onModifyCategories($event)"
+                    fxFill>
+    </ign-categories>
+
     <ign-tags [tags]="tags"
               [edit]="true"
               [disabled]="uploading"
