--- a/src/app/searchbar/searchbar.component.scss
+++ b/src/app/searchbar/searchbar.component.scss
@@ -1,7 +1,20 @@
 .wrapper {
   padding: 5px 15px 5px 15px;
+  width: 700px;
 }
 
 #search-icon {
   vertical-align: text-top;
+}
+
+.background {
+  background-color: whitesmoke;
+}
+
+::ng-deep .mat-input-wrapper{
+  width:300px !important;
+}
+
+::ng-deep .mat-selected-wrapper{
+  width:200px !important;
 }
