--- a/src/app/searchbar/searchbar.component.scss
+++ b/src/app/searchbar/searchbar.component.scss
@@ -12,9 +12,9 @@
 }
 
 ::ng-deep .mat-input-wrapper{
-  width:300px !important;
+  width:300px;
 }
 
 ::ng-deep .mat-selected-wrapper{
-  width:200px !important;
+  width:200px;
 }
