--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -10,13 +10,22 @@
       </ng-template>
 
       <div class="tab-content">
-        <ign-fuel-resource-list [resources]="models"
-                                resourceType="models"
-                                [disabled]="activeTab !== 'models'"
-                                [finished]="!paginatedModels?.hasNextPage()"
-                                (onLoadMore)="loadNextModelsPage()"
-                                fxFlex>
-        </ign-fuel-resource-list>
+        <div fxLayout="column">
+          <div fxLayout="row">
+            <ign-searchbar [filters]="['categories']" fxFlex fxLayoutAlign="center center"></ign-searchbar>
+          </div>
+          <div fxLayout="row">
+            <ign-fuel-resource-list [resources]="models"
+                                    resourceType="models"
+                                    [disabled]="activeTab !== 'models'"
+                                    [finished]="!paginatedModels?.hasNextPage()"
+                                    (onLoadMore)="loadNextModelsPage()"
+                                    fxFlex>
+            </ign-fuel-resource-list>
+          </div>
+        </div>
+        
+        
       </div>
     </mat-tab>
 
@@ -29,13 +38,20 @@
       </ng-template>
 
       <div class="tab-content">
-        <ign-fuel-resource-list [resources]="worlds"
-                                resourceType="worlds"
-                                [disabled]="activeTab !== 'worlds'"
-                                [finished]="!paginatedWorlds?.hasNextPage()"
-                                (onLoadMore)="loadNextWorldsPage()"
-                                fxFlex>
-        </ign-fuel-resource-list>
+        <div fxLayout="column">
+          <div fxLayout="row">
+            <ign-searchbar fxFlex fxLayoutAlign="center center"></ign-searchbar>
+          </div>
+          <div fxLayout="row">
+            <ign-fuel-resource-list [resources]="worlds"
+                                    resourceType="worlds"
+                                    [disabled]="activeTab !== 'worlds'"
+                                    [finished]="!paginatedWorlds?.hasNextPage()"
+                                    (onLoadMore)="loadNextWorldsPage()"
+                                    fxFlex>
+            </ign-fuel-resource-list>
+          </div>
+        </div>
       </div>
     </mat-tab>
   </mat-tab-group>
