Websocket and Visualizer in Admin Component

--- a/src/app/admin/cloudsim/admin-cloudsim.component.html
+++ b/src/app/admin/cloudsim/admin-cloudsim.component.html
@@ -73,5 +73,9 @@
       <mat-tab label="Launch Queue">
         <ign-launch-queue></ign-launch-queue>
       </mat-tab>
+
+      <mat-tab label="Websocket">
+        <ign-sim-visualizer></ign-sim-visualizer>
+      </mat-tab>
     </mat-tab-group>
   </div>
