--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -138,7 +138,7 @@
             [checked]="experimentalGzWeb"
             (change)="onToggleGzWebFeature($event)">
           </mat-slide-toggle>
-          <span>Enable <a href="http://gazebosim.org/gzweb" target="_blank">GzWeb</a> for model visualization.</span>
+          <span>Enable <a href="http://gazebosim.org/gzweb" target="_blank">GzWeb</a> for model visualization during model upload.</span>
         </div>
       </mat-tab>
     </mat-tab-group>
