--- a/src/app/model/edit/edit-model.component.html
+++ b/src/app/model/edit/edit-model.component.html
@@ -43,6 +43,14 @@
         </mat-radio-group>
       </div>
 
+      <h2>Metadata</h2>
+      <ign-metadata [metadata]="model.metadata"
+                [edit]="true"
+                [disabled]="updating"
+                (onModify)="onModifyMetadata()"
+                fxFill>
+      </ign-metadata>
+
       <h2>Replace files</h2>
 
       <ign-file-upload (files)="onReceiveFiles($event)"
