--- a/src/app/model/model.component.scss
+++ b/src/app/model/model.component.scss
@@ -3,18 +3,17 @@
 
 
 .content {
-  max-width: 980px;
   width: 100%;
 }
 
 .row-left {
-  flex: 0 1 70%;
+  flex: 0 1 80%;
   position: relative;
 }
 
 .row-right {
   display: block;
-  flex: 0 0 30%;
+  flex: 0 0 20%;
   min-width: 15em;
 }
 
@@ -161,6 +160,15 @@
   z-index: 1002;
   color: mat-color($custom-theme-accent, A700);
 }
+
+.buttonFullscreen {
+  top: 2em;
+  right: 6em;
+  position: absolute;
+  z-index: 1002;
+  color: mat-color($custom-theme-accent, A700);
+}
+
 
 /* Media query to increase the size of the gallery in mobile views.
    Otherwise, the gallery images are too small. */
