--- a/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.html
+++ b/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.html
@@ -53,9 +53,33 @@
   </div>
 </div>
 
-<div>
-  <div class="container">
-    <div id="scene">
+<div fxLayout="row">
+  <div class="visualizer" fxFill>
+    <div class="outer">
+
+      <a class="follow-button" *ngIf="following" mat-icon-button (click)="follow(null)" title="Stop following">Stop following</a>
+
+      <div class="controls">
+        <a mat-icon-button (click)="openFullscreen()" title="Full Screen"><mat-icon>fullscreen</mat-icon></a>
+      </div>
+
+      <div class="inner" fxLayoutAlign="center center">
+        <div fxLayout="row" fxLayoutAlign="center center">
+          <div id="scene" (window:resize)="resize()" #fullScreen></div>
+          <div fxLayout="column" class="gz3d-side-panel" *ngIf="models.length > 0">
+            <h2>Entities</h2>
+            <mat-list class="entity-list">
+              <mat-list-item *ngFor="let model of models" [matMenuTriggerFor]="menu">{{model['name']}}
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item (click)="select(model)">Select</button>
+                  <button mat-menu-item (click)="moveTo(model)">Move to</button>
+                  <button mat-menu-item (click)="follow(model)">Follow</button>
+                </mat-menu>
+              </mat-list-item>
+            </mat-list>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
