--- a/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.scss
+++ b/src/app/admin/cloudsim/visualizer-tester/sim-visualizer-tester.component.scss
@@ -22,3 +22,63 @@ li {
   height: 100%;
   background-color: lightgray;
 }
+
+.visualizer {
+  .outer {
+    height: 0;
+    width: 100%;
+    /* Aspect Ratio: 16:9. 9/16 = 0.5625 */
+    padding-top: 56.25%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .inner, #scene {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+  }
+
+  .controls {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    color: white;
+  }
+  .follow-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    color: white;
+    padding-left: 10px;
+  }
+}
+
+.gz3d-side-panel {
+  margin: 60px 0px;
+  background-color: #f3f3f7;
+  color: #3f3f3f;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
+  height: calc(100% - 120px);
+
+  h2 {
+    padding: 10px;
+  }
+
+  .entity-list  {
+    overflow-y: scroll;
+  }
+  
+  .entity-list .mat-list-item:hover {
+    background-color: #e3e3e7;
+    cursor: pointer;
+  }
+}
