--- a/src/app/cloudsim/detail/simulation.component.html
+++ b/src/app/cloudsim/detail/simulation.component.html
@@ -51,7 +51,8 @@
           <a class="follow-button" *ngIf="following" mat-icon-button (click)="follow(null)" title="Stop following">Stop following</a>
 
           <div class="controls">
-            <a mat-icon-button (click)="openFullscreen()" title="Full Screen"><mat-icon>fullscreen</mat-icon></a>
+            <a mat-icon-button (click)="resetView()" title="Reset view"><mat-icon>home</mat-icon></a>
+            <a mat-icon-button (click)="openFullscreen()" title="Full screen"><mat-icon>fullscreen</mat-icon></a>
           </div>
 
           <div class="inner" fxLayoutAlign="center center">
