--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -30,6 +30,7 @@
             <mat-icon>3d_rotation</mat-icon>
           </a>
           <a *ngIf="view3d" mat-icon-button (click)="openFullscreen()" title="Full Screen" class="buttonFullscreen"><mat-icon>fullscreen</mat-icon></a>
+          <a *ngIf="view3d" mat-icon-button (click)="resetView()" title="Reset view" class="buttonResetView"><mat-icon>home</mat-icon></a>
 
           <div *ngIf="view3d" #fullScreen>
             <ign-sdfviewer
