--- a/src/app/description/description.component.scss
+++ b/src/app/description/description.component.scss
@@ -12,4 +12,10 @@
 #description-field {
   overflow-wrap: break-word;
   overflow: overlay;
+  line-height: 1.5em;
+}
+
+textarea{
+  line-height: 1.5em;
+  padding-bottom: 1em;
 }
