--- a/src/app/collection/dialog/collection-dialog.component.scss
+++ b/src/app/collection/dialog/collection-dialog.component.scss
@@ -1,11 +1,13 @@
 @import '~@angular/material/theming';
 @import '../../../styles/custom-theme.scss';
 
-.content {
-  max-width: 25em;
-}
-
 .collection-input {
   width: 100%;
   margin-right: 1rem;
+}
+
+mat-radio-group {
+  mat-radio-button:not(:first-child) {
+    padding-left: 10px;
+  }
 }
