--- a/src/app/collection/edit/edit-collection.component.html
+++ b/src/app/collection/edit/edit-collection.component.html
@@ -36,6 +36,15 @@
                        fxFill>
       </ign-description>
 
+      <div fxLayout="column" fxFill>
+        <p>Select if your collection is public or private:</p>
+        <mat-radio-group [formControl]="privacyInputForm">
+          <mat-radio-button *ngFor="let p of collectionService.getPermissionList(); let i = index"
+            [value]="i"
+            [checked]="(p === 'Private' && collection.private) || (p === 'Public' && !collection.private)">{{p}}</mat-radio-button>
+        </mat-radio-group>
+      </div>
+
       <div fxLayout="row" fxLayoutAlign="space-between center" fxFill>
         <button mat-raised-button type="button" (click)="back()">Cancel</button>
 
