--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -6,16 +6,10 @@
 
   <div class="header" fxLayout="row" fxLayoutAlign="space-between" fxFill>
     <div>
-      <div>
-        <ign-page-title [title]="collection.name" icon="collections"></ign-page-title>
-        <h4>
-          By <a class="color-link" routerLink="/{{collection?.owner}}" routerLinkActive="active">{{collection?.owner}}</a>
-        </h4>
-      </div>
-
-      <div>
-        <ign-description [description]="collection?.description"></ign-description>
-      </div>
+      <ign-page-title [title]="collection.name" icon="collections"></ign-page-title>
+      <h4>
+        By <a class="color-link" routerLink="/{{collection?.owner}}" routerLinkActive="active">{{collection?.owner}}</a>
+      </h4>
     </div>
 
     <div fxLayout="row wrap" fxLayoutAlign="end" class="buttons">
@@ -34,6 +28,18 @@
         <mat-icon>delete</mat-icon>
       </button>
     </div>
+  </div>
+
+  <div class="header" fxLayout="row" fxFill>
+    <ign-description [description]="collection?.description"></ign-description>
+  </div>
+
+  <div fxLayout="row" fxFill fxLayoutAlign="center center">
+    <mat-form-field [floatLabel]="'never'" fxFlex="50%">
+        <mat-label>Search in collection</mat-label>
+        <input #search matInput type="search" (keyup.enter)="onSearch(search.value)">
+        <mat-icon matPrefix id="search-icon">search</mat-icon>
+    </mat-form-field>
   </div>
 
   <mat-tab-group dynamicHeight fxFill (selectedIndexChange)="setActiveTab($event)">
