Add bibtex to description
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -5,20 +5,35 @@
   </div>
 
   <div class="header" fxLayout="row" fxLayoutAlign="space-between" fxFill>
-    <div>
+    <div fxFlex="30%">
+      
       <ign-page-title [title]="collection.name" icon="collections"></ign-page-title>
       <h4>
         By <a class="color-link" routerLink="/{{collection?.owner}}" routerLinkActive="active">{{collection?.owner}}</a>
       </h4>
+
     </div>
 
-    <div fxLayout="row wrap" fxLayoutAlign="end" class="buttons">
-        <button mat-icon-button
-          [disabled]="!authService.isAuthenticated()"
-          [title]="getCopyButtonTitle()"
-          (click)="copyCollection()">
-          <mat-icon>content_copy</mat-icon>
-        </button>
+    <div fxFlex="40%" fxLayoutAlign="center center">
+      <mat-form-field [floatLabel]="'never'" fxFill>
+          <mat-label>Search in collection</mat-label>
+          <input #search matInput type="search" (keyup.enter)="onSearch(search.value)">
+          <mat-icon matPrefix id="search-icon">search</mat-icon>
+      </mat-form-field>
+    </div>
+
+    <div fxFlex="30%" fxLayout="row wrap" fxLayoutAlign="end" class="buttons">
+      <button mat-icon-button
+        [disabled]="!authService.isAuthenticated()"
+        [title]="getCopyButtonTitle()"
+        (click)="copyCollection()">
+        <mat-icon>content_copy</mat-icon>
+      </button>
+
+      <button mat-icon-button title="Copy Bibtex to clipboard"
+        (click)="copyBibtex()">
+        <mat-icon>library_books</mat-icon>
+      </button>
 
       <button mat-icon-button title="Edit collection" *ngIf="canEdit"
         routerLink="/{{collection?.owner}}/collections/{{collection?.name}}/edit">
@@ -30,17 +45,10 @@
     </div>
   </div>
 
-  <div class="header" fxLayout="row" fxFill>
+    <div class="header" fxLayout="row" fxFill>
     <ign-description [description]="collection?.description"></ign-description>
   </div>
 
-  <div fxLayout="row" fxFill fxLayoutAlign="center center">
-    <mat-form-field [floatLabel]="'never'" fxFlex="50%">
-        <mat-label>Search in collection</mat-label>
-        <input #search matInput type="search" (keyup.enter)="onSearch(search.value)">
-        <mat-icon matPrefix id="search-icon">search</mat-icon>
-    </mat-form-field>
-  </div>
 
   <mat-tab-group dynamicHeight fxFill (selectedIndexChange)="setActiveTab($event)">
     <mat-tab>
