--- a/src/app/world/world.component.scss
+++ b/src/app/world/world.component.scss
@@ -177,3 +177,12 @@
 .tab-body {
   padding: 10px;
 }
+
+pre.bibtex {
+  margin: 0px;
+}
+
+.bibtex:hover {
+  cursor: pointer;
+  color: mat-color($custom-theme-primary);
+}
