--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,5 +4,6 @@
   <p>You can navigate to a particular section by clicking the buttons below.</p>
   <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="20px">
     <a mat-raised-button color="primary" [routerLink]="['cloudsim']">Cloudsim</a>
+    <a mat-raised-button color="primary" [routerLink]="['elasticsearch']">Elasticsearch</a>
   </div>
 </div>
